--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+			<dependency>
+				<groupId>org.modelmapper.extensions</groupId>
+				<artifactId>modelmapper-spring</artifactId>
+				<version>2.4.4</version> <!-- Or another stable version -->
+			</dependency>
+
+
 	</dependencies>
 
 	<build>
